fixed header nav overflow

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -17,7 +17,6 @@ body {
 .wrapper {
 	position: relative;
 	max-width: 1048px;
-	overflow: hidden;
 }
 
 #spinner {
